# coroutines-explained

./: .gitignore  readme.md  slides.key  slides.txt
notes/: coroutines.md  references.md
plugins/run-as-script/: plugin.groovy
plugins/slides-presenter/: plugin.groovy
slides-presenter/: plugin.groovy
src/0/: 0-hello.lua  1.lua  3.lua
src/0-coroutines/: 0-hello.lua  0.lua  0_.lua  0__.lua  1.lua  2.lua  2_.lua  3.lua  4.lua  5.js  5_.js  6.js  6_.js  x.js
src/0-coroutines-as-threads/: 0-subroutine.lua  1.lua  2.lua  2_.lua  3-c1c2.lua  4-sub-yield.lua
src/1-coroutines-yield/: 0-yield-0.js  0-yield-1.js  0-yield-2-loop.js  0-yield-2.js  0-yield-3-loop.js  0-yield-3.js  0-yield-4-loop-.js  0-yield-4-loop-fixed.js  0-yield-4-loop.js  0-yield-6-finally.js  1-yield-factorial-1-iterable.js  1-yield-factorial-2-skip.js  1-yield-factorial-2.js  1-yield-factorial.js  1b-yield-factorial.js  x.js
src/2-calcc/: 1-return.scm  3-yield.scm
src/2-callcc/: 0-hello.scm  1-return.scm  2-saved-return.scm  3-yield.scm  5-multitasking.scm
src/2-coroutines-as-asyncawait/: 0-execution-flow.js  0.js  1-async-return.js  1.js  2-composition.js  2.js  2b.js  3-try-catch.js  4-try-catch-fsm.js
src/3-coroutines-as-callcc/1-callcc/boost/: CMakeLists.txt  callcc-factorial.cpp  callcc.cpp
src/3-generators/: 0-hello.cs  0-yield-1.js  0-yield-2-loop.js  0-yield-2.js  0-yield-3-loop.js  0-yield-6-catch.js  0-yield-6-finally.js  0-yield.js  1-yield-factorial-2.js  1-yield-factorial.js  2-yield-factorial.cs  2-yield-factorial.js  2-yield-fibonacci.cs  2-yield-foo.js  2-yield.cs  x.kts  (+2 more)
(+104 files in other folders)
